css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    height: 100vh;
    background: linear-gradient(#e66465, #9198e5);
    display: flex;
    justify-content: center;
    align-items: center;
}
h1 {
    padding-bottom: 1.25rem;
}
h2 {
    font-style: italic;
    text-align: center;
}

